# sot-motion-planner

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  error-estimation.py
.travis/: build
doc/: CMakeLists.txt
doc/sphinx/: conf.py.in  index.rst.in
gnuplot/: bug.gp  check_correction-theta.gp  check_correction-x.gp  check_correction-xy.gp  check_correction-xy2.gp  check_correction-xyz.gp  check_correction-y.gp  check_correction.gp  log.gp  mocap.gp  retrieve.sh  synchronize.sh
share/: CMakeLists.txt
share/sot-motion-planner/object/: blueball.py  disk.py  disk2.py  shelf.py
share/sot-motion-planner/plan/: demo-icra.yaml  demo-icra2.yaml  demo-icra3.yaml  reach-left-com.yaml  reach-left.yaml  reach-right-left-com.yaml  reach-right-left.yaml  several-walk-motions-mocap.yaml  several-walk-motions.yaml  turn-in-place-mocap.yaml  walk-forward-virtual-sensor.yaml  walk-in-place-and-reach.yaml  walk-in-place-mocap-head.yaml  walk-in-place-mocap.yaml  walk-in-place-virtual-sensor.yaml  walk-in-place-visp-head.yaml  walk-in-place-visp.yaml  walk-in-place.yaml  walk-ros-ctrl.yaml  walk-ros.yaml
share/sot-motion-planner/trajectory/: forward.yaml
share/sot/motion-planner/: chair.py  config.py  left-footstep.py  light.py  right-footstep.py  stand.py  table.py
src/: CMakeLists.txt  MotionCaptureToWaistMObject.cc  MotionCaptureToWaistMObject.hh  common.hh  correction.cc  discretized-trajectory.cc  discretized-trajectory.hh  error-estimator.cc  error-estimator.hh  error-merger.cc  error-merger.hh  error-trajectory.cc  error-trajectory.hh  feet-follower-analytical-pg.cc  feet-follower-analytical-pg.hh  feet-follower-from-file.cc  feet-follower-from-file.hh  feet-follower-ros.cc  feet-follower-ros.hh  feet-follower-with-correction.cc  feet-follower-with-correction.hh  feet-follower.cc  feet-follower.hh  go-to-one-position.cc  go-to-one-position.hh  legs-error.cc  legs-follower.cc  legs-follower.hh  localizer.cc  object-position-kalman.cc  object-position-kalman.hh  posture-error.cc  randomizer.cc  randomizer.hh  robot-position-from-visp.cc  robot-position-from-visp.hh  set-reference-trajectory.hh  simu-object-position-in-camera.cc  simu-object-position-in-camera.hh  simu-object-position.cc  (+18 more)
src/analytical-pg/: newPGstepStudy.cpp  newPGstepStudy.h
src/dynamic_graph/sot/motion_planner/: __init__.py  __init__.py.in  clean2_legs_follower_graph.py  error_estimation_strategy.py  error_estimation_strategy_landmarks.py  feet_follower_graph.py.in  feet_follower_graph_with_correction.py  feet_follower_graph_with_correction.py~  feet_follower_test.py  joint_traj_legs_follower_graph.py  joint_traj_meta_legs_follower_graph.py  legs_follower_graph.py  math.py  motion_plan.py  robot_viewer.py  simu_object.py  sway_motion_correction.py
src/dynamic_graph/sot/motion_planner/motion_plan/: __init__.py  environment.py  error_strategy.py  tools.py  viewer.py
src/dynamic_graph/sot/motion_planner/motion_plan/control/: __init__.py  abstract.py  constant.py  control_ros.py  hueblob.py  mocap.py  virtual_sensor.py  visp.py
src/dynamic_graph/sot/motion_planner/motion_plan/motion/: __init__.py  abstract.py  joint.py  task.py  visual_point.py  walk.py  walk_ros.py
src/dynamic_graph/sot/motion_planner/test/: __init__.py  clean2_legs_follower.py  feet_follower_analytical_pg_correction.py  feet_follower_analytical_pg_step1.py  feet_follower_analytical_pg_step2.py  feet_follower_analytical_pg_walk_on_a_thread.py  feet_follower_from_file_los.py  feet_follower_from_file_simple.py  feet_follower_from_file_walk_on_a_thread.py
tests/: CMakeLists.txt  camera.oct  camera.py  correction.py  error-estimator.py  feet-follower-correction.py  feet_follower.py  fvp.py  legs_follower_test.py  multiple-observations-simple.py  multiple-observations-weight-combination.py  op-point.py  sensor-position-sympy.py  sensor-position.py  simple.py  sway-motion-correction-andrei.py  sway-motion-correction.py  time.cc
tests/feet-follower/: common.py  feet_follower_analytical_pg_step1.py  feet_follower_analytical_pg_step2.py  feet_follower_analytical_pg_walk_on_a_thread.py  feet_follower_analytical_pg_walk_on_a_thread.sh  feet_follower_correction.py  feet_follower_from_file_los.py  feet_follower_from_file_simple.py  feet_follower_from_file_walk_on_a_thread.py
tests/local_stepper_test/: los.pos  los.wzmp  los.zmp
tests/motion-plan/: demo-icra.yaml  demo-icra2.yaml  motion-plan.py  nothing.yaml  reach-left-com.yaml  reach-left.yaml  reach-right-left-com.yaml  reach-right-left.yaml  turn-in-place-mocap.yaml  visp.py  walk-forward-virtual-sensor.yaml  walk-in-place-and-reach.yaml  walk-in-place-mocap-head.yaml  walk-in-place-mocap.yaml  walk-in-place-virtual-sensor.yaml  walk-in-place-visp.yaml  walk-in-place.yaml
tests/motion-plan/vs/: test1.py
